...
private struct LogoView: View {
    var body: some View {
        Image("login_logo")
            .resizable()
            .padding()
            .aspectRatio(contentMode: .fit)
            .accessibilityIdentifier("loginLogoImage")
            .padding(.top, 50)
    }
}

private struct LoginTextFieldsView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
...
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(AppColors.mainColor)
                    .cornerRadius(30)
            }
            .disabled(viewModel.isLoading)
            .accessibilityIdentifier("loginButton")
            
            
            HStack {
                Rectangle()
                    .frame(height: 1)
                    .foregroundColor(.gray)
...
                    viewModel.errorMessage = nil
                    viewModel.email = ""
                    viewModel.password = ""
                    navigationPath.append(NavigationDestination.SignupView(viewModel))
                }
            }
            .accessibilityIdentifier("moveToSignUpButton")
        }
        .padding(.top, 15)
    }
}

