...
        HStack {
            Text("Search Travel")
                .font(.system(size: 32).bold())
                .padding(.vertical)
                .fontWeight(.semibold)
                .frame(maxWidth: .infinity, alignment: .leading)
                .accessibilityIdentifier("travelSearchViewTitle")
            
            Spacer()
            
            if horizontalSizeClass == .compact {
                // iOS
                UserPreferencesButtonView(navigationPath: $navigationPath, isPresenting: $isPresenting)
...
